# virtualExerciseCoach

./: CMakeLists.txt  README.md  README_ja.md  clear_and_insert_yoga.sql  compile_and_run_gtkmm.sh  create_admin_user.sql  database_schema.sql  fc  login_credentials.conf  requirements.txt  基本設計書.md  詳細仕様書.md
src/: AuthManager.cc  AuthManager.h  DatabaseManager.cc  DatabaseManager.h  Exercise.h  ExerciseDetailWindow.cc  ExerciseDetailWindow.h  ExerciseHistoryWindow.cc  ExerciseHistoryWindow.h  LoginWindow.cc  LoginWindow.h  MyPageWindow.cc  MyPageWindow.h  PasswordChangeWindow.cc  PasswordChangeWindow.h  PoseDetectionWindow.cc  PoseDetectionWindow.h  ProfileEditWindow.cc  ProfileEditWindow.h  RegisterWindow.cc  RegisterWindow.h  User.cc  User.h  VirtualFitnessCoachWindow.cc  VirtualFitnessCoachWindow.h  main.cc  style.css
tensorflow-2.18.1/tensorflow/lite/: CMakeLists.txt
